[gd_scene load_steps=8 format=3 uid="uid://56crg8gqnbdg"]

[ext_resource type="PackedScene" uid="uid://b2kf5pjs88d6t" path="res://UI/UnitInventory/unit_inventory_panel.tscn" id="1_4h8mj"]
[ext_resource type="Script" path="res://UI/_alpha_CombatHUD/EntryList.gd" id="1_4ru2q"]
[ext_resource type="Script" path="res://UI/UnitInventory/unit_inventory.gd" id="1_ptfra"]
[ext_resource type="Script" path="res://UnitInfoBlock.gd" id="3_dw73y"]
[ext_resource type="PackedScene" uid="uid://civyu43ep0hvd" path="res://UI/UnitInventory/stat_block_entry.tscn" id="4_382cc"]
[ext_resource type="Texture2D" uid="uid://bn2j7jkcgtx4u" path="res://Units/Ally/ElementalMage/elementalmage.png" id="4_se7fv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_54keb"]
bg_color = Color(0.41, 0.41, 0.41, 1)

[node name="UnitInventory" type="CanvasLayer" node_paths=PackedStringArray("unit_inventory_panel", "unit_stat_block", "inventory_context_parent")]
script = ExtResource("1_ptfra")
unit_inventory_panel = NodePath("UnitInventory")
unit_stat_block = NodePath("UnitInfo")
inventory_context_parent = NodePath("InventoryContext")

[node name="UnitInventory" parent="." instance=ExtResource("1_4h8mj")]
offset_left = -896.0
offset_top = 64.0
offset_right = -896.0
offset_bottom = 64.0
HideConsumables = false

[node name="InventoryContext" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 332.0
offset_top = 64.0
offset_right = 372.0
offset_bottom = 104.0

[node name="MarginContainer" type="MarginContainer" parent="InventoryContext"]
layout_mode = 0
offset_right = 150.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="InventoryContext/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryContext/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="EquipButton" type="Button" parent="InventoryContext/MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_54keb")
text = "Equip"

[node name="UseButton" type="Button" parent="InventoryContext/MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_54keb")
text = "Use"

[node name="TrashButton" type="Button" parent="InventoryContext/MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_54keb")
text = "Trash
"

[node name="UnitInfo" type="Control" parent="." node_paths=PackedStringArray("statBlockParent", "unitIcon")]
layout_mode = 3
anchors_preset = 0
offset_left = 654.0
offset_top = 312.0
offset_right = 694.0
offset_bottom = 352.0
script = ExtResource("3_dw73y")
statBlockEntry = ExtResource("4_382cc")
statBlockParent = NodePath("VBoxContainer/PanelContainer/GridContainer")
unitIcon = NodePath("VBoxContainer/Control/Icon")

[node name="VBoxContainer" type="VBoxContainer" parent="UnitInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Control" type="Control" parent="UnitInfo/VBoxContainer"]
custom_minimum_size = Vector2(246, 192)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="UnitInfo/VBoxContainer/Control"]
custom_minimum_size = Vector2(192, 192)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -96.0
offset_right = 96.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_se7fv")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="UnitInfo/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="UnitInfo/VBoxContainer/PanelContainer"]
layout_mode = 2
columns = 3
script = ExtResource("1_4ru2q")

[connection signal="pressed" from="InventoryContext/MarginContainer/PanelContainer/VBoxContainer/EquipButton" to="." method="OnEquipButton"]
[connection signal="pressed" from="InventoryContext/MarginContainer/PanelContainer/VBoxContainer/UseButton" to="." method="OnUseButton"]
[connection signal="pressed" from="InventoryContext/MarginContainer/PanelContainer/VBoxContainer/TrashButton" to="." method="OnTrashButton"]
